osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experiment_same_number_of_buckets_and_sizes.txt
error: buckets and bucket_sizes must have the same number of elements
--> main.sml:3:70
     |
   3 | A = Experiment(entity=E1, buckets=['control', 'b', 'c'], bucket_sizes=[15, 20], version=1, revision=1)
     |                                                                       ^